css/style.css
*{
	margin: 0;
	padding: 0;
	box-sizing: border-box;
	font-family: "Open Sans";
}

html,body{
	height:100%;
}

/*** Classes Auxiliares ***/

.center{
	margin: 0 auto;
	max-width: 1280px;
	padding:0 2%;
}

.clear{
	clear: both;
}

.layer{
	position: absolute;
	left: 0;
	top: 0;
	width: 100%;
	height: 100%;
	background: rgba(0,0,0,0.7);
	z-index: 1;
}

.hideme{
    opacity:0;
}

/*Header*/

section.main{
	position: relative;
	background-image: url('../images/bg1.jpg');
	background-size: cover;
	background-position: center;
	width: 100%;
	padding: 15px 0;
	min-height: 800px;
}

section.main header{
	position: relative;
	z-index: 2;
	padding-bottom: 10px;
	border-bottom: 1px solid white;
}

.icons-social{
	float: right;
}

.icons-social a{
	color: white;
	text-decoration: none;
	font-size: 20px;
	margin: 0 10px;
}

.logo{
	margin-top: 20px;
	float: left;
	font-size: 25px;
	font-weight: bold;
	color: white;
}

nav.mobile{
	display:none;
	float: right;
}

nav.mobile > i{
	position: relative;
	top: 10px;
	font-size:35px;
	color: white;
	cursor: pointer;
	padding: 10px;
}

nav.mobile ul{
	display: none;
	position: absolute;
	z-index: 2;
	left: 0;
	width: 100%;
	top: 100px;
	list-style-type: none;
	background: white;
}

nav.mobile ul li{
	padding: 8px 0;
	text-align: center;
	border-bottom:2px solid #444 ;
}

nav.mobile ul li a{
	display: block;
	text-decoration: none;
	color: #444;
}

nav.desktop{
	margin-top: 20px;
	float: right;
}

nav.desktop ul{
	list-style-type: none;
}

nav.desktop ul li{
	font-size: 17px;
	margin: 0 15px;
	display: inline-block;
	font-weight: lighter;
}

nav.desktop ul li a{
	text-decoration: none;
	color: white;
}

.conteudo-header{
	position: relative;
	max-width: 700px;
	margin: 120px 0;
	z-index: 1;
	transition: 2s;
}

.conteudo-header h2{
	color: white;
	font-weight: lighter;
	font-size: 44px;
}

.conteudo-header h2 > span{
	color: #2693FF;
}

.conteudo-header p{
	color: white;
	margin-top: 18px;
	font-size: 16px;
	font-weight: lighter;
}

.conteudo-header a{
	display: block;
	width: 177px;
	height: 44px;
	line-height: 44px;
	background: #2693FF;
	color: white;
	text-align: center;
	text-decoration: none;
	margin-top: 18px;
	border-radius: 20px;
}

.chamada-planos{
	width: 100%;
	text-align: center;
	padding: 27px 2%;
	background: rgb(220, 220, 220);
}

.chamada-planos h2{
	display: inline-block;
	border-top: 2px solid #2693FF;
	color: #2693FF;
	text-transform: uppercase;
	font-weight: lighter;
	font-size: 20px;
}

.box-planos{
	padding: 40px 0;
}

.box-planos > .center{
	display: flex;
	flex-wrap: wrap;
}

.box-planos-single{
	width: 33.3%;
	padding: 0 10px;
	
}

.box-planos-wraper{
	width: 100%;
	min-height: 300px;
	box-shadow: 2px 2px 10px rgb(106, 106, 106);
	transition: 0.6s;
}

.box-planos-wraper:hover{
	box-shadow: 2px 2px 10px rgb(0, 253, 0);
}

.box-planos-single h2{
	background:#2693FF;
	color: white;
	font-weight: lighter;
	padding: 3px;
	text-align: center;
}

.pontos-plano{
	padding: 8px 0 15px 0;
}

.preco{
	margin-top: 10px;
	padding: 15px 0;
	text-align: center;
}

.preco h2{
	background: transparent;
	font-size: 24px;
	color: #777;
	padding: 0 20px;
	display: inline-block;
	border-top: 1px solid #ccc;
}

.box-planos-single p{
	color: #777777;
	font-size: 16px;
	margin-top: 6px;
	margin-left: 20px;
}

section.parallax{
	position: relative;
	width: 100%;
	min-height: 300px;
	padding: 40px 0;
	background-image: url('../images/background2.png');
	background-attachment: fixed; /*efeito parallax*/
	background-size: cover;
	background-position: center;
}

section.parallax > .center{
	position: relative;
	z-index: 2;
	margin: 40px auto;
	max-width: 960px;
	color: white;
}

section.parallax h2{
	text-align: center;
	color: white;
}

section.parallax p{
	margin-top: 15px;
	color: white;
}

.overlay-parallax{
	width: 100%;
	height: 100%;
	position: absolute;
	top: 0;
	left: 0;
	z-index: 1;
	background-color: rgba(20, 20, 20, 0.6);
}

section.final-section{
	padding: 30px 0;
}

.w50{
	float: left;
	width: 50%;
	padding: 0 20px;
	margin: 30px 0;
}

section.final-section h2{
	position: relative;
	font-weight: lighter;
	color: #777777;
	font-size: 24px;
}

section.final-section h2 > .border-efeito{
	position: absolute;
	width: 50px;
	height: 2px;
	background: #777;
	transition: 0.8s;
}

section.final-section h2:hover > .border-efeito{
	width: 180px;
}

.contato input:not([type=submit]){
	width: 100%;
	height: 40px;
	line-height: 40px;
	border: 1px solid #ccc;
	padding-left: 8px;
	margin-top:10px;
}

.contato textarea{
	width: 100%;
	height: 120px;
	border: 1px solid #ccc;
	padding: 8px;
	margin-top: 10px;
	resize: vertical;
}

.contato input[type=submit]{
	cursor: pointer;
	background: #2693FF;
	color: white;
	border: 0;
	width: 100px;
	height: 33px;
	border-radius: 30px;
	margin-top: 15px;
}

.time > .w50{
	width: 48%;
	margin: 15px 1%;
}

.equipe-single{
	padding: 10px 8px;
	min-height: 240px;
	border: 1px solid #ccc;
	padding-bottom: 20px;
	box-shadow: 2px 2px 10px rgb(106, 106, 106);
}

.equipe-single .box-avatar{
	display: inline-block;
	width: 50px;
	height: 50px;
	border-radius: 50%;
	background: #777;
}

.equipe-single .topo-box-usuario{
	padding-bottom: 8px;
	border-bottom: 1px solid #ccc;
	vertical-align: middle;
}

.info-usuario{
	display: inline-block;
	padding-left: 8px;
	color: #777777;
	vertical-align: middle;
}

.descricao-usuario-box{
	color: #999999;
	font-weight: lighter;
	font-size: 14px;
	margin-top: 8px;
}

/***MEDIA SCREENS***/

@media screen and (max-width: 768px){
	.box-planos-single{
		width: 100%;
	}

	.box-planos-single p{
		text-align: center;
	}

	.w50{
		width: 100%;
		margin: 15px 0;
	}

	.time > .w50{
		width: 100%;
		margin: 15px 0;
	}

	nav.mobile{
		display:block;
	}

	nav.desktop{
		display:none;
	}
}

